# jama-cli

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_COVERAGE.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  EXAMPLES.md  LICENSE  NOTICE  README.md  ROADMAP.md  config.yml.example  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
docs/: api_reference.md  configuration.md  installation.md  usage.md
jama_cli/: __init__.py  config.py  main.py
jama_cli/commands/: attachments.py  baseline.py  config_cmd.py  diff.py  history.py  items.py  migrate.py  picklists.py  projects.py  relationships.py  search.py  serve.py  tags.py  tests.py  trace.py  types.py  users.py
jama_cli/core/: __init__.py  client.py
jama_cli/models/: __init__.py
jama_cli/output/: __init__.py  console.py  formatters.py
jama_mcp_server/: __init__.py  config.py
jama_mcp_server/api/: __init__.py  client.py
jama_mcp_server/core/: __init__.py  server.py  stdio_server.py
jama_mcp_server/models/: __init__.py
tests/: __init__.py  conftest.py  test_baseline_command.py  test_cache.py  test_cli_commands.py  test_cli_integration.py  test_client.py  test_config.py  test_config_command.py  test_console.py  test_diff.py  test_formatters.py  test_history_command.py  test_main.py  test_mcp_api_client.py  test_mcp_config.py  test_mcp_models.py  test_mcp_server_integration.py  test_mcp_stdio_server.py  test_migrate.py  test_migrate_command.py  test_models.py  test_read_operations.py  test_search.py  test_serve_command.py  test_server.py  test_stdio_server.py  test_trace_command.py  test_write_operations.py
